chore(front): updates to hovers, shadows, gradients, colors, and interactions

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -5,11 +5,14 @@
   --light: #fce2b2ff;
   --light-5: #fce2b20c;
   --light-10: #fce2b219;
-  --turkey-red: #a60800ff;
+  --orange: #f6aa1cff;
+  --orange-100: #ffecc8ff;
   --blistre: #2e1e0fff;
   --celestial: #e3f6ffff;
+  --celestial-a90: #e3f6ffe5;
+  --celestial-a75: #e3f6ffbf;
   --celestial-a30: #e3f6ff4c;
-  --grape: #5a34bdff;
+  --grape: #231151ff;
   --eerie-black: #1a2018ff;
   --oxford-blue: #0e0f24ff;
   --rich-black: #0f0f1cff;
