--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -1,27 +1,28 @@
 @import 'syntax.css';
 
 .syntax-highlighter {
-  @apply my-9
-    w-full
-    rounded-lg
-    shadow-lg
-    sm:w-auto;
   position: relative;
   z-index: 3;
   transition: transform 0s;
-  background-color: rgb(var(--background-pre-rgb));
+  margin-top: 2.25rem;
+  margin-bottom: 2.25rem;
+  border-radius: 0.5rem;
   padding: 0 1.75rem 0 1.5rem;
   padding-bottom: 1.5rem;
+  width: 100%;
+  &::before {
+    position: absolute;
+    mask:
+      linear-gradient(3deg, #fff 0 0) content-box,
+      linear-gradient(3deg, #fff 0 0);
+    mask-composite: exclude;
+    inset: 0;
+    border-radius: 0.77rem;
+    padding: 1px 1px 0 0;
+    content: '';
+  }
   &.copying {
     transform: scale(101%);
-  }
-  &:hover,
-  &:focus {
-    .title,
-    .language,
-    .code-copy-btn {
-      color: rgba(var(--link-rgb), 0.77);
-    }
   }
   .title,
   > pre {
@@ -32,10 +33,8 @@
   .language {
     position: absolute;
     z-index: 4;
-    background-color: rgb(var(--background-start-rgb));
     padding: 0.75rem;
     width: 50%;
-    color: rgb(var(--foreground-rgb));
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
       'Liberation Mono', 'Courier New', monospace; /* 1 */
 
@@ -53,7 +52,6 @@
     right: 0;
     transition: color 0.5s;
     border-top-right-radius: 0.375rem;
-    color: rgba(var(--foreground-rgb), 0.33);
     text-align: right;
     &.copy {
       padding-right: 2.77rem;
@@ -65,14 +63,9 @@
     z-index: 5;
     transition: color 333ms;
     padding: 0.75rem;
-    color: rgba(var(--foreground-rgb), 0.33);
     line-height: 1.6;
     > * {
       pointer-events: none;
-    }
-    &:hover,
-    &:focus-visible {
-      color: rgba(var(--foreground-rgb), 1);
     }
     &:active {
       top: 2px;
@@ -95,7 +88,6 @@
     &.copying {
       cursor: default;
       pointer-events: none;
-      color: rgba(var(--foreground-rgb), 1);
       .icon-code-copy {
         display: none;
       }
@@ -239,5 +231,11 @@
         }
       }
     }
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .syntax-highlighter {
+    width: auto;
   }
 }
