--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -42,13 +42,7 @@
   a {
     transition: color, border-color;
     transition-duration: 0.33s;
-    border-bottom: 1px solid rgba(var(--foreground-rgb), 0.77);
-    color: rgba(var(--text-accent-rgb), 0.7);
-    &:hover,
-    &:focus {
-      border-color: rgb(var(--highlight-rgb));
-      color: rgba(var(--text-accent-rgb), 1);
-    }
+    border-bottom: 1px solid;
   }
 }
 
