chore(front): polishes off dark theme blockquote styles/colors

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -7,6 +7,7 @@
   --light-10: #fce2b219;
   --orange: #f6aa1cff;
   --orange-100: #ffecc8ff;
+  --orange-100-a75: #ffecc8bf;
   --blistre: #2e1e0fff;
   --celestial: #e3f6ffff;
   --celestial-a90: #e3f6ffe5;
