chore(front): moves more colors into dark theme; updates classnames where repetitive

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -6,6 +6,7 @@
   --light-5: #fce2b20c;
   --light-10: #fce2b219;
   --orange: #f6aa1cff;
+  --burnt-orange: #81320bff;
   --orange-100: #ffecc8ff;
   --orange-100-a75: #ffecc8bf;
   --blistre: #2e1e0fff;
