--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -47,18 +47,14 @@ body.ready .header.scroll-transition {
     opacity-95
     transition-colors
     sm:max-w-5xl;
-  .post-aside,
-  .category-aside {
+}
+
+.post,
+.category {
+  .aside {
     border: 0;
     border-left-width: 1px;
     border-left-style: solid;
-    border-image: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0),
-        rgba(var(--foreground-rgb), 0.2),
-        rgba(0, 0, 0, 0)
-      )
-      1;
     padding: 0 1rem;
     @screen sm {
       padding: 2rem 1rem 0;
