--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -94,7 +94,7 @@
   }
   h1.post-title,
   .post-article,
-  .post-aside,
+  .aside,
   .aside-toggle {
     position: relative;
     top: -1rem;
@@ -122,7 +122,7 @@
     display: inline;
     float: right;
   }
-  .post-aside {
+  .aside {
     display: none;
     opacity: 0.85;
     width: 0;
@@ -250,7 +250,7 @@
   blockquote {
     @apply dg--font-lb;
     position: relative;
-    margin: 1.5rem 0.5rem 0 0.5rem;
+    margin: 1.5rem 0 0;
     border-radius: 0.5rem;
     padding: 0.5rem 1.5rem;
     overflow: visible;
@@ -274,14 +274,14 @@
         linear-gradient(3deg, #fff 0 0) content-box,
         linear-gradient(3deg, #fff 0 0);
       mask-composite: exclude;
-      inset: 0;
-      border-radius: 0.25rem;
+      box-sizing: border-box;
+      border-radius: 0.5rem;
       padding: 1px 1px 0 0;
       content: '';
     }
     &::after {
       right: 0;
-      bottom: -3rem;
+      bottom: -3.5rem;
       content: '”';
       @media screen and (min-width: 640px) {
         bottom: -3.5rem;
@@ -291,19 +291,21 @@
       }
     }
     p {
+      position: relative;
+      z-index: 7;
       padding: 0;
       @media screen and (min-width: 640px) {
-        padding: 0 1rem;
+        padding: 0;
       }
       &:first-child {
         &::before {
           position: absolute;
-          top: 0;
-          left: -1rem;
+          top: -2rem;
+          left: -3rem;
           content: '“';
           @media screen and (min-width: 768px) {
-            top: -0.5rem;
-            left: -1.25rem;
+            top: -2rem;
+            left: -3.25rem;
           }
         }
       }
