chore(front): sets sentry config with float; adds missing color to Code light theme

--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -310,11 +310,11 @@
             }
           }
           td:first-child {
-            background: var(--lemon);
+            background: var(--lemon-25);
             background: linear-gradient(
               90deg,
-              var(--lemon) 65%,
-              var(--lemon) 81%,
+              var(--lemon-25) 65%,
+              var(--lemon-25) 81%,
               transparent 100%
             );
             color: var(--violet-a30);
