chore(front): updates styles for mini page-nav

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -18,4 +18,6 @@
   --eerie-black: #1a2018ff;
   --oxford-blue: #0e0f24ff;
   --rich-black: #0f0f1cff;
+  --rich-black-a30: #0f0f1c4c;
+  --rich-black-a75: #0f0f1cbf;
 }
