--- a/front/src/lib/styles/base/colors-light.css
+++ b/front/src/lib/styles/base/colors-light.css
@@ -8,6 +8,8 @@
   --lemon: #f1f0ccff;
   --lemon-25: #fffee3ff;
   --lemon-50: #fdfdeeff;
+  --lemon-50-a30: #fdfdee4c;
+  --lemon-50-a75: #fdfdeebf;
   --jasper: #cd533bff;
   --darkred: #8c1c13ff;
   --sand: #fc9f5bff;
