chore(front): updates light theme hover color in syntax-highlighter

--- a/front/src/lib/styles/base/theme.css
+++ b/front/src/lib/styles/base/theme.css
@@ -270,7 +270,7 @@
           &:hover,
           &:active,
           &:focus-visible {
-            color: var(--light);
+            color: var(--violet);
           }
         }
       }
